# dotman

./: Cargo.toml  README.md  justfile
.github/workflows/: build.yaml
src/: cli.rs  config.rs  error.rs  hash.rs  lib.rs  main.rs  utils.rs
tests/config/: fail_to_parse.toml  working.toml
