[package]
name = "dotman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0"
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.8"
